tests/traci/get_variable/Vehicle/errors/UnsupportedVariable/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xa4: Get Vehicle Variable: unsupported variable 0xff specified
